<resources>
    <string name="app_name">Movie</string>
    <string name="discover_your">Discover Your</string>
    <string name="favorite_show">Favorite Show</string>
    <string name="watch_now_or_watch_later">Watch Now or Watch Later</string>
    <string name="Description">you can browse movies and shows by genre, search for specific title, or check out our recommendation for you</string>
    <string name="get_started">Get started</string>
    <string name="login">Login</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="forgot_your_password">Forgot Your Password?</string>
    <string name="dont_have_an_account">Don\'t have an account</string>
    <string name="search_movies">Search Movies ...</string>
    <string name="category">Category</string>
    <string name="best_movies">Best Movies</string>
    <string name="upcoming_movies">Upcoming Movies</string>
    <string name="explorer">Explorer</string>
    <string name="favorite">Favorite</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="title">title</string>
    <string name="summary">Summary</string>
    <string name="actors">Actors</string>
</resources>