<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="@color/main_color"
    tools:context=".activity.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_128"
                android:layout_marginStart="@dimen/margin_xLarge"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size_50"/>

            <EditText
                android:id="@+id/userEdt"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edittext_height"
                android:background="@drawable/edittext_bg"
                android:hint="@string/username"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:gravity="center"
                android:ems="10"
                android:inputType="text"
                android:layout_marginTop="@dimen/margin_128"
                android:layout_marginHorizontal="@dimen/margin_xLarge"
                />

            <EditText
                android:id="@+id/passEdt"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edittext_height"
                android:background="@drawable/edittext_bg"
                android:hint="@string/password"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:gravity="center"
                android:ems="10"
                android:inputType="textPassword"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_marginHorizontal="@dimen/margin_xLarge"
                />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgot_your_password"
                android:textSize="@dimen/font_size_16"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/margin_standard"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/loginBtn"
                style="@android:style/Widget.Button"
                android:layout_marginHorizontal="@dimen/margin_xLarge"
                android:layout_marginTop="@dimen/margin_64"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/orange_bg"
                android:text="@string/login"
                android:textSize="@dimen/font_size_18"
                android:textColor="@color/white"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dont_have_an_account"
                android:textSize="@dimen/font_size_16"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/margin_xLarge"/>

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Register Now"
                android:textSize="@dimen/font_size_16"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="@color/white"
                />


        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>